syntax = "proto3";

package bar;

message TestInclude {
  int32 a = 1;
}

enum TestEnum {
  VALUE_A = 0;
  VALUE_B = 1;
}
